# code-archaeology

./: .gitignore  README.md  README_CN.md
cli-node/: package-lock.json  package.json  tsconfig.json
cli-node/src/: index.ts  types.ts
cli-node/src/annotator/: comment-style.ts  inserter.ts  templates.ts
cli-node/src/commands/: annotate.ts  dig.ts
cli-node/src/core/: git-analyzer.ts  pr-extractor.ts  reporter.ts  timeline.ts
cli-python/: pyproject.toml
cli-python/.omc/state/: last-tool-error.json
cli-python/src/code_archaeology/: cli.py  types.py
cli-python/src/code_archaeology/annotator/: comment_style.py  inserter.py  templates.py
cli-python/src/code_archaeology/commands/: annotate.py  dig.py
cli-python/src/code_archaeology/core/: git_analyzer.py  pr_extractor.py  reporter.py  timeline.py
skill/: code-archaeology.md
