[project]
name = "code-archaeology"
version = "0.1.0"
description = "Trace the evolution of any code segment"
authors = [{name = "zheng.wang"}]
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "click>=8.1.0",
    "gitpython>=3.1.40",
    "rich>=13.7.0",
]

[project.scripts]
code-dig = "code_archaeology.cli:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
